tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__bash_completion_subcommands.snap
---
source: tests/integration_tests/shell_wrapper.rs
assertion_line: 3041
expression: "String::from_utf8_lossy(&output.stdout)"
---
switch
list
remove
sync
merge
step
hook
config
