tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__nushell_completion_subcommands.snap
---
source: tests/integration_tests/shell_wrapper.rs
assertion_line: 3088
expression: completions
---
switch
list
remove
sync
merge
step
hook
config
