tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__zsh_completion_fpath_autoload.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
completer: _wt
switch
list
remove
merge
step
hook
config
